Alignment fix.

--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,14 @@ body {
 
 
 .container {
-  margin: 30px 20px;
+  margin: 0 0;
   padding: 20px;
   /* padding: 20px; */
   border: 2px solid lightgray;
   border-radius: 20px;
   width: fit-content;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #FAFAFA;
